changing masthead color
aic stylesheet

adding space to file

changes to ordering, titles and masthead images

changes to ordering

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -1,6 +1,6 @@
 en:
   sufia:
-    product_name:           "Lakeshore"
+    product_name:           "AIC Digital Asset Management System"
     product_twitter_handle: "@artinstitutechi"
     institution_name:       "AIC"
     institution_name_full:  "The Art Institute of Chicago"
