renaming files to assets

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -9,8 +9,68 @@ en:
       form:
         option:
           all:
-            label_short:  "All"
-            label_long:   "All Resources"
+            label_short:    "All"
+            label_long:     "All Resources"
           my_files:
-            label_short:  "My Assets"
-            label_long:   "My Assets"
+            label_short:    "My Assets"
+            label_long:     "My Assets"
+    dashboard:
+      view_files:           "View Assets"
+      transfer_files_link:  "Select assets to transfer"
+      no_transfers:         "You haven't transferred any assets"
+      stats:
+        files:              "Assets you've deposited"
+      my:
+        files:              "My Assets"
+        shares:             "Assets Shared with Me"
+        facet_label:
+          files:            "Filter your assets"
+    file:
+      collections_list:
+        heading:   "This asset is in the following collections:"
+        empty:     "This asset is not currently in any collections."
+    messages:
+      success:
+        multiple:
+          link: "These assets"
+        title:  "Assets uploaded successfully"
+      failure:
+        multiple:
+          link: "These assets"
+        title:  "Assets failed"
+    batch:
+      help:
+        resource_type: "You may select multiple types to apply to all assets"
+    collection:
+      select_form:
+        select_heading: "Select the collection to add your assets to:"
+      show:
+        add_files:
+          label: "Add assets"
+          desc: "Add assets to this Collection"
+        upload_files:
+          label: "Upload assets"
+          desc: "Upload assets to this Collection"
+    admin:
+      stats:
+        deposited_form:
+          heading: "Display Assets Deposited:"
+        user_deposits:
+          heading: "Display assets deposited by users"
+
+    metadata_help:
+      generic_file:
+        resource_type_html: "Pre-defined categories to describe the type of asset content being uploaded, such as &quot;article&quot; or &quot;dataset.&quot;  More than one type may be selected."
+        title: "A name for the asset to aid in identifying it. Defaults to the asset name, though a more descriptive title is encouraged. &lt;em&gt;This is a required field&lt;/em&gt;."
+        tag: "Words or phrases you select to describe what the asset is about. These are used to search for content. &lt;em&gt;This is a required field&lt;/em&gt;."
+        subject: "Headings or index terms describing what the asset is about; these &lt;em&gt;do&lt;/em&gt; need to conform to an existing vocabulary. Currently supports Library of Congress Subject Headings."
+        creator_html: "The person or group responsible for the asset being uploaded. Usually this is the author of the content. Personal names should be entered with the last name first, e.g. &quot;Smith, John.&quot; &lt;em&gt;This is a required field&lt;/em&gt;."
+        related_url: "A link to a website or other specific content (audio, video, PDF document) related to the asset. An example is the URL of a research project from which the asset was derived."
+        based_near_html: "A place name related to the asset, such as its site of publication, or the city, state, or country the asset's contents are about. Calls upon the GeoNames web service (&lt;a href=&quot;http://www.geonames.org&quot;&gt;http://www.geonames.org&lt;/a&gt;)."
+        contributor_html: "A person or group you want to recognize for playing a role in the creation of the asset, but not the primary role. If there is a specific role you would like noted, include it in parentheses, e.g. &quot;Jones, Mary (advisor).&quot;"
+        date_created: "The date on which the asset was generated. Dates are accepted in the form YYYY-MM-DD, e.g. 1776-07-04."
+        description: "Free-text notes about the asset itself. Examples include abstracts of a paper, citation information for a journal article, or a tag indicating a larger collection to which the asset belongs."
+        identifier: "A unique handle describing the asset. An example would be a DOI for a journal article, or an ISBN or OCLC number for a book."
+        language: "The language of the asset content."
+        publisher: "The person or group making the asset available. Generally this is the institution."
+        rights: "Licensing and distribution information governing access to the asset. Select from the provided drop-down list. &lt;em&gt;This is a required field&lt;/em&gt;."
