--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -155,3 +155,13 @@ en:
         view_ids: "Viewing angle, overall or detail, etc."
         representation_for: "A CITI resource for which these assets serve as representations."
         document_for: "A CITI resource for which these assets serve as documents."
+
+  curation_concerns:
+    institution:
+      name: "AIC"
+    visibility:
+      authenticated:
+        text: "AIC"
+      department:
+        text: "Department"
+        label_html: "Department"
