Edit and display visibility for assets and file sets

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -159,6 +159,7 @@ en:
   curation_concerns:
     institution:
       name: "AIC"
+    institution_name: "AIC"
     visibility:
       authenticated:
         text: "AIC"
