Adjust main menu and dashboard items, fixes #665. (#249)

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -31,17 +31,17 @@ en:
         menu: "Assets"
         new: "New"
         my: "My Assets"
-        batch: "Batch Create"
+        batch: "Create Assets"
       collections:
         menu: "Collections"
         my: "My Collections"
-        new: "New Collection"    
+        new: "New Collection"
     dashboard:
       title:                    "My Dashboard"
       view_collections:         "View Collections"
       create_collection:        "Create Collection"
       view_files:               "View Files"
-      view_works:               "View Assets"
+      view_works:               "My Assets"
       create_work:              "Create Asset"
       user_activity:            "User Activity"
       no_activity:              "User has no recent activity"
