--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -2,7 +2,7 @@ en:
   lakeshore:
     upload:
       restrictions_html: "<h3>Maximum Upload Restrictions</h3><ul><li>Individual File Size: 1 GB</li></ul>"
-      asset_types: "The following file formats can be uploaded:"
+      asset_types: "The following %{type} file types can be uploaded:"
     relationship:
       add_assets: "Add New Assets to this Resource"
       batch_add_representations: "Add Representations"
