--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -183,35 +183,37 @@ en:
 
     hints:
       defaults:
-        description: "Free-text notes about the Asset, e.g. description of the subject of an image or abstract of a text document."
         alt_label: "Optional titles or names for the resource. These fields will be added to the 'alt' tag of Web images. For longer text, please use the 'description' field."
-    metadata_help:
-      generic_file:
-        resource_type_html: "Pre-defined categories to describe the type of asset content being uploaded, such as &quot;article&quot; or &quot;dataset.&quot;  More than one type may be selected."
-        title: "A name for the asset to aid in identifying it. Defaults to the asset name, though a more descriptive title is encouraged. &lt;em&gt;This is a required field&lt;/em&gt;."
-        tag_ids: "Words or phrases you select to describe what the asset is about. These are used to search for content. &lt;em&gt;This is a required field&lt;/em&gt;."
-        subject: "Headings or index terms describing what the asset is about; these &lt;em&gt;do&lt;/em&gt; need to conform to an existing vocabulary. Currently supports Library of Congress Subject Headings."
-        creator_html: "The person or group responsible for the asset being uploaded. Usually this is the author of the content. Personal names should be entered with the last name first, e.g. &quot;Smith, John.&quot; &lt;em&gt;This is a required field&lt;/em&gt;."
-        related_url: "A link to a website or other specific content (audio, video, PDF document) related to the asset. An example is the URL of a research project from which the asset was derived."
-        based_near_html: "A place name related to the asset, such as its site of publication, or the city, state, or country the asset's contents are about. Calls upon the GeoNames web service (&lt;a href=&quot;http://www.geonames.org&quot;&gt;http://www.geonames.org&lt;/a&gt;)."
-        contributor_html: "A person or group you want to recognize for playing a role in the creation of the asset, but not the primary role. If there is a specific role you would like noted, include it in parentheses, e.g. &quot;Jones, Mary (advisor).&quot;"
+        description: "Free-text notes about the Asset, e.g. description of the subject of an image or abstract of a text document."
+        pref_label: "Preferred title or name of the resource. This will be the principal value for the 'alt' tag of web images."
+      #exhibition:
+        document_uris: "Assets documenting this resource."
+        preferred_representation_uri: "Preferred image representing the resource. This will be used for the resource thumbnail and similar purposes"
+        representation_uris: "Visual representations of this resource."
+      generic_work:
+        capture_device: "Capture device of original file."
+        compositing_uri: "Whether the image is a composite, a part of a composite, a layer in a multi-layer image, etc."
+        contributor: "Agent who participated in the creation of the resource although not in a primary role."
+        created_by: "Agent who was primarily responsible for the creation of the resource."
         date_created: "The date on which the asset was generated. Dates are accepted in the form YYYY-MM-DD, e.g. 1776-07-04."
-        description: "Free-text notes about the asset itself. Examples include abstracts of a paper, citation information for a journal article, or a tag indicating a larger collection to which the asset belongs."
-        identifier: "A unique handle describing the asset. An example would be a DOI for a journal article, or an ISBN or OCLC number for a book."
+        description: "Free-text notes about the Asset, e.g. description of the subject of an image or abstract of a text document."
+        digitization_source_uri: "Original document for non-born-digital assets."
+        documents_for: "A CITI resource for which these assets serve as documents."
+        document_type_uri: "Select one document type from the hierarchy."
+        imaging_uid: "Unique image number assigned by Imaging."
+        keyword_uris: "Keyword to loosely classify a resource by topic, theme, subject, etc."
         language: "The language of the asset content."
-        publisher: "The person or group making the asset available. Generally this is the institution."
+        light_type_uri: "Light type used to capture the image."
+        publish_channel_uris: "Channel(s) that this Asset is published in. Multiple options are possible.  <em>The Asset must have Visibility set to 'Open Access' for this to have effect.</em>"
+        publisher: "The Agent making the asset available. Generally this is the institution."
+        representations_for: "A CITI resource for which these assets serve as representations."
+        resource_type: "Pre-defined categories to describe the type of asset content being uploaded, such as &quot;article&quot; or &quot;dataset.&quot;  More than one type may be selected."
         rights: "Licensing and distribution information governing access to the asset. Select from the provided drop-down list. &lt;em&gt;This is a required field&lt;/em&gt;."
-        document_type_ids: "Select one document type from the hierarchy."
-        created_by: "Person or corporate body who was primarily responsible for the creation of the resource."
-        rights_holder: "Name of rights holder or URL pointing to an actor resource."
-        asset_capture_device: "Capture device of original file."
-        status_id: "Status of the resource."
-        digitization_source_id: "Original document for non-born-digital assets."
-        compositing_id: "Compositing type."
-        light_type_id: "Light type used to capture the image."
-        view_ids: "Viewing angle, overall or detail, etc."
-        representation_for: "A CITI resource for which these assets serve as representations."
-        document_for: "A CITI resource for which these assets serve as documents."
+        rights_holder: "Agent holding legal rights for this resource."
+        status_uri: "Status of the resource."
+        view_notes: "Additional notes related to view. <em>Please use the 'view' field first and only add here what is not already available as an option in the drop-down menu.</em>"
+        view_uris: "Viewing angle, overall or detail, etc."
+        visual_surrogate: "Description of an image meant to be used as a reference for visually impaired users (ADA compatibility)."
 
   curation_concerns:
     institution:
