--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -1,5 +1,6 @@
 en:
   lakeshore:
+    unauthorized: "You are not authorized to see this asset." 
     upload:
       restrictions_html: "<h3>Maximum Upload Restrictions</h3><ul><li>Individual File Size: 1 GB</li></ul>"
       asset_types: "The following file types can be uploaded:"
