Licensing fields, ref #1460
Adds fields for public domain, copyright representatives, and licensing restrictions.

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -155,37 +155,39 @@ en:
         preferred_representation_uri: "Preferred Representation"
         representation_uris:          "Representations"
       asset: &asset
-        uid:                  "UID"
-        legacy_uid:           "Legacy UID"
-        document_type:        "Document Type"
-        status:               "Status"
-        pref_label:           "Preferred Title"
-        resource_created:     "Resource Created"
-        dept_created:         "Created By Department"
-        resource_updated:     "Resource Updated"
-        description:          "Description"
-        batch_uid:            "In Batch"
-        language:             "Language"
-        publisher:            "Publisher"
-        rights_holder:        "Rights Holder"
-        tag:                  "Tag"
-        created_by:           "Created By"
-        compositing:          "Image Compositing"
-        light_type:           "Image Capture Light Type"
-        view:                 "Image View"
-        asset_capture_device: "Asset Capture Device"
-        digitization_source:  "Original Source"
-        representation_for:   "Representation Of"
-        representations_for:  "Representation Of"
-        document_for:         "Documentation For"
-        documents_for:        "Documentation For"
-        publish_channels:     "Publish Channels"
-        imaging_uid:          "Imaging UID"
-        view_notes:           "View Notes"
-        visual_surrogate:     "Visual Surrogate"
-        attachment_uris:      "Attachments"
-        attachments_for:      "Attachment For"
-        use_uri:              "Role"
+        uid:                    "UID"
+        legacy_uid:             "Legacy UID"
+        document_type:          "Document Type"
+        status:                 "Status"
+        pref_label:             "Preferred Title"
+        resource_created:       "Resource Created"
+        dept_created:           "Created By Department"
+        resource_updated:       "Resource Updated"
+        description:            "Description"
+        batch_uid:              "In Batch"
+        language:               "Language"
+        publisher:              "Publisher"
+        rights_holder:          "Rights Holder"
+        tag:                    "Tag"
+        created_by:             "Created By"
+        compositing:            "Image Compositing"
+        light_type:             "Image Capture Light Type"
+        view:                   "Image View"
+        asset_capture_device:   "Asset Capture Device"
+        digitization_source:    "Original Source"
+        representation_for:     "Representation Of"
+        representations_for:    "Representation Of"
+        document_for:           "Documentation For"
+        documents_for:          "Documentation For"
+        publish_channels:       "Publish Channels"
+        imaging_uid:            "Imaging UID"
+        view_notes:             "View Notes"
+        visual_surrogate:       "Visual Surrogate"
+        attachment_uris:        "Attachments"
+        attachments_for:        "Attachment For"
+        use_uri:                "Role"
+        public_domain:          "Public Domain"
+        licensing_restriction_uris: "Licensing Restrictions"
       generic_work:
         <<: *asset
       batch_upload_item:
@@ -227,6 +229,8 @@ en:
         visual_surrogate: "Description of an image meant to be used as a reference for visually impaired users (ADA compatibility)."
         attachment_uris: "Other assets that are attachments of the current asset being edited."
         attachments_for: "Other assets that have the current asset as an attachment."
+        public_domain: "Indicates asset is in the public domain"
+        licensing_restriction_uris: "Licenses that restrict access to this asset."
       generic_work:
         <<: *asset
       batch_upload_item:
